--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,14 +1,96 @@
 html, body, .content, .sidebar {
   /* overflow: scroll; */
   /* overflow-x: hidden; */
+  
+  /* background-image: url('../assets/photos/pct/sadboy.jpg'); */
+  /* background-size: contain; */
   font-family: minerva modern;
   font-size: 12px;
-  /* background-color: #d5dad3; */
+  background-color: #e6dcd1 !important;
   color: #303a2c;
 }
 
+
+.project_thought_title {
+  width: 40%;
+}
+
+.thought_skills {
+  padding-left: 470px !important;
+  margin-bottom: 20px;
+  margin-top: -50px;
+  max-width: 900px;
+  min-width: 500px;
+}
+
+.thoughts h2 {
+  text-align: center;
+  margin-right: 50%;
+  font-size: 18px;
+  margin-top: -50px;
+  margin-bottom: 40px;
+}
+
+#other_title {
+  margin-top: 60px;
+}
+
+h3 {
+  min-height: 40px !important;
+}
+
+/* .links span, .thoughts span, .yo {
+  text-decoration: none;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 1px;
+  transition: background-size cubic-bezier(0.25, 0.25, 0.25, 0.25) 0.25s;
+} */
+
+#cs_skills span {
+  text-align: right !important;
+  text-decoration: none;
+  transition: none !important;
+  /* margin-left: 100px; */
+}
+
+.landing {
+  /* width: 200px;
+  height: 200px; */
+  display: block;
+  position: relative;
+}
+
+/* .landing::after {
+  background-image: url("../assets/photos/pct/sadboy.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center; 
+  background-size: 1200px;
+  position: absolute;
+  z-index: 0;
+  width: 100vw;
+  height: 100vh;
+  margin-bottom: 300px;
+  margin-left: 300px;
+  margin-top: -200px;
+  content: "";
+  opacity: 0.5;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  position: absolute;
+  z-index: 0;   
+} */
+
+
+/* .landing_links {
+  z-index: 9999;
+} */
 a {
-  color: black !important;
+  color: #303a2c !important;
 }
 
 html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .sidebar::-webkit-scrollbar, .bottom_bar::-webkit-scrollbar {
@@ -17,12 +99,58 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
 
 /* Fade Animation */
 
+.landing_links {
+  font-size: 12px !important;
+  /* margin-top: 8% !important; */
+  /* margin-left: -80% !important; */
+}
+
+span {}
+
+.landing_contact {
+  /* margin-top: 8% !important; */
+  /* margin-left: -85% !important; */
+}
+
+.landing {
+  /* background-image: url("../assets/photos/pct/sadboy.jpg");
+  background-color: rgb(230, 220, 209,0.4);
+  background-blend-mode: lighten; */
+  background-size: 1200px;
+  background-repeat: no-repeat;
+  margin-top: 0%;
+  margin-left: 15%;
+  width: 100%;
+  min-height: 900px;
+  justify-content: center;
+  text-align: center;
+  font-family: minerva modern;
+}
+/* .landing_heading {
+  margin-top: 100px;
+} */
+.landing_heading h3 {
+  color: rgb(0, 0, 0) !important;
+  font-size: 22px;
+  margin-top: 100px;
+  margin-left: -80%;
+}
+
+
+.landing_heading p {
+    color: black !important;
+  font-style: italic;
+  font-size: 14px;
+  /* margin-top: -10px; */
+  margin-left: -80%;
+}
+
 .fade_in_page_slower {
-  animation: fadeIn ease 2.5s;
-  -webkit-animation: fadeIn ease 2.5s;
-  -moz-animation: fadeIn ease 2.5s;
-  -o-animation: fadeIn ease 2.5s;
-  -ms-animation: fadeIn ease 2.5s;
+  animation: fadeIn ease 2.1s;
+  -webkit-animation: fadeIn ease 2.1s;
+  -moz-animation: fadeIn ease 2.1s;
+  -o-animation: fadeIn ease 2.1s;
+  -ms-animation: fadeIn ease 2.1s;
 }
 
 .fade_in_page {
@@ -144,13 +272,106 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
 }
  */
 
+.gallery_pics_holder {
+  /* border: px solid green; */
+  /* width: 100%; */
+  text-align: center;
+  margin: 50px;
+  /* margin-bottom: 250px; */
+  /* height: 350px; */
+}
+
+.gallery_pics {
+  display: inline-block;
+  /* width: 450px; */
+  /* height: 300px; */
+  text-align: center;
+  /* margin: 300px; */
+  /* background-color: #3C0; */
+}
+
+.gallery_pics img {
+  width: 60%;
+  margin-left: 10%;
+  /* height: 100%; */
+  /* margin-top: 100px; */
+
+}
+
+.gallery_pics:hover {
+  /* cursor: pointer; */
+}
+
+.gallery_pics.fullscreen img {
+  /* width: 60% !important; */
+  /* z-index: 9999;
+  position: absolute; */
+  /* width: 100%; */
+  /* margin-left: -25%; */
+  /* margin-bottom: 50px; */
+  /* margin-left: 11%; */
+  /* transition: ease; */
+}
+
+/* 
+.gallery_pics.fullscreen img:hover {
+  opacity: 1.0;
+  transition: ease;
+} */
+
+.gallery_pics.fullscreen {
+  /* width: 200%;
+  height: 200%; */
+
+
+  /* z-index: 9999;
+  position: absolute; */
+  /* margin: 0 auto; */
+  /* margin: 0; */
+  /* width: 60%; */
+  /* margin-left: -30%; */
+  
+  /* height: 100%; */
+  /* top: 5%;
+  left: 5%; */
+  /* background-color: #000000; */
+}
+
+img:hover {
+  /* opacity: 0.7;
+  transition: opacity 0.1s; */
+}
+
+img {
+  /* transition: opacity 0.1s; */
+}
+
+/* #overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 2;
+  cursor: pointer;
+} */
+
+/* #myIm
+
 .content {
   /* background-color: #eee;
   width: 200px;
   height: 100px;
   border: 1px dotted black; */
-  overflow-y: hidden;
-  /* Add the ability to scroll */
+
+/* overflow-y: hidden; */
+
+/* Add the ability to scroll */
+
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
@@ -185,15 +406,20 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   font-size: 14px;
 }
 
+.thoughts h3 p {
+  margin-top: 1px;
+  font-size: 11px;
+}
+
 .thoughts p {
   margin-top: -2px;
 }
 
 .about_text {
   margin: auto;
-  margin-top: 2%;
-  margin-left: 10.5%;
-  width: 65%;
+  margin-top: 3%;
+  margin-left: 15%;
+  width: 50%;
 }
 
 .about_signature {
@@ -203,9 +429,10 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
 
 #ytplayer {
   margin: auto;
-  width: 60%;
+  margin-top: 5% !important;
+  /* width: 60%; */
   margin-top: 3%;
-  margin-left: 16%;
+  margin-left: 13%;
 }
 
 .logo_block {
@@ -225,7 +452,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
 
 .column {
   float: left;
-  width: 25%;
+  width: 5%;
 }
 
 /* .circle {
@@ -330,6 +557,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   height: 100%;
   overflow: hidden;
 }
+
 .thought_title {
   font-style: italic;
 }
@@ -369,9 +597,6 @@ div.content {
 
 /* and (orientation:landscape) */
 
-
-
-
 @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
@@ -379,6 +604,7 @@ div.content {
     position: relative;
   }
   .links {
+    min-width: 200px !important;
     margin-top: -60px;
     /* padding: 16; */
   }
@@ -388,9 +614,17 @@ div.content {
     margin-left: 25%;
   }
   .column {
-    margin-top: -20%;
-    /* min-width: 20px; */
+    margin-top: -1%;
+    min-width: 20px;
   }
+  .column a span {
+    margin-top: 200px;
+    /* padding-left: 20px; */
+  }
+  /* .column a {
+    
+    padding-left: 30px;
+  } */
   .self_title p {
     /* margin-bottom: -50px; */
   }
