--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -6,29 +6,12 @@
         src="https://www.youtube.com/embed/ai6nz2hmtW8?autoplay=0" frameborder="0">
     </iframe>
     <div class="about_text">
-        <p>
-            As there are countless ideas competing for my attention at any given time, I thought it wise to jot some of
-            them down here (primarily for my own organizational benefit - if they interest you, all the better)!
+            <p>
+                &emsp; The best things in life involve building meaningful relationships with people and
+                spending as much time as possible in and appreciating nature.A year of my time was spent with a remarkable community at Spring Valley Farm in Connecticut, and I have also had the privilege to dedicate two summers to completing the Appalachian and Pacific Crest Trails.
         </p>
-        <p>
-            I started out in Mystic, Connecticut (of sailing fame) in 1996 and have made my way down to Washington D.C.
-            for cherry blossoms (and work). I am deeply passionate about doing my part to create a more holistically
-            sustainable world - starting with social sustainability. To this end, I am leading the creation of a project
-            to one day eliminate the stigma against vocational (so-called "blue-collar") work, and begin bridging the
-            human-connectedness gap between the working class and "urban-elite", which of late has come into high-relief
-            on the political stage. </p>
-        <p>
-            As for myself, the best things in life revolve around building meaningful relationships with people,
-            spending as much time as possible in and appreciating nature, and leveraging my boundless technical
-            curiosity to solve meaningful problems. I spend too much time thinking and not enough time working with my
-            hands, so trying to do a bit more of that as well. I believe that in life for all things there is a season, and my lived experience has epitomized this
-            philosophy. From spending a year farming and studying at the communal Spring Valley Farm (University of
-            Connecticut) to hiking 5,000 miles alone on the Appalachian (2017) and Pacific Crest (2018) Trails, to
-            dedicatedly practicing classical piano through college to working on very exciting technical and people
-            problems across a wide-array of disciplines in a consulting role near the city - I would say that I have
-            been fortunate enough to have had a good run of it so far.
-        </p>
-        <p>
+        <p>          
+            &emsp; With a boundless curiosity for the world, I aspire to apply techology towards solving meaningful problems. Feel free to check out my <a href="../static/assets/resume/resume.pdf" download="resume" class="yo"><span>resume</span></a> if you are into that sort of thing.   <p>
             I try to approach each day with the optimism which it deserves, and am grateful for the many oppurtunities I
             have had and those which await to do my part to better the world in small steps.
         </p>
@@ -36,5 +19,17 @@
             - Al
         </p>
     </div>
+
 </div>
 {% endblock %}
+
+<!-- <p>
+    I thought it wise to jot some of my ideas here (primarily for my own organizational benefit - if they interest you, all the better)!
+</p> -->
+<!-- <p>
+    I was born in Mystic, Connecticut (of sailing fame) in 1996 and have made my way down to Washington D.C.
+    for cherry blossoms. I am passionate about creating a more holistically
+    sustainable world - starting with social sustainability. To this end, I am leading the creation of a project
+    to one day eliminate the stigma against vocational (so-called "blue-collar") work, and begin bridging the
+    human-connectedness gap between the working class and "urban-elite", which of late has come into high-relief
+    on the political stage. </p> -->
