--- a/app/templates/side_bar.html
+++ b/app/templates/side_bar.html
@@ -1,13 +1,20 @@
-<div class="sidebar">
+{% set active_page = request.path %}
+<div class='{{"sidebar fade_in_page_slower" if rule=="./thoughts/landing.html" else "sidebar"}}'>
+
+  <!-- <li > -->
+
   <div class="self_title">
     <h3>Al Miller III</h3>
     <p>Towards holistic sustainability.</p>
   </div>
   <div class="side_bar_top_margin"></div>
   <div class="links">
-    <a href="/"><span>thoughts</span></a>
-    <a href="./portfolio.html"><span>portfolio</span></a>
-    <a href="./about.html"><span>about</span></a>
+    <a href="./thoughts.html" {% if active_page == '/thoughts.html'  %}style="text-decoration: underline !important;"
+      {% endif %}><span>thoughts</span></a>
+    <a href="./portfolio.html" {% if active_page == '/portfolio.html'  %}style="text-decoration: underline !important;"
+      {% endif %}><span>portfolio</span></a>
+    <a href="./about.html" {% if active_page == '/about.html'  %}style="text-decoration: underline !important;"
+      {% endif %}><span>about</span></a>
   </div>
   <div class="contact">
     <div class="row">
