--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,7 @@
 <div class="fade_in_page_slower">
     <div class="landing">
         <div class="landing_heading ">
+            <div class="marg"></div>
             <h3>Al Miller III</h3>
             <p>Towards holistic sustainability.</p>
         </div>
