--- a/app/templates/photography.html
+++ b/app/templates/photography.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
-{% block title %}Photography{% endblock %}
+{% block title %}photography{% endblock %}
 {% block content %}
 {% for image in images %}
-<div class="gallery_pics_holder">
-    <div class="gallery_pics">
-        <img id="myImg" class="images_class" src="{{url_for('static', filename='./assets/photos/pct/'+image)}}" />
+<div class="image_container">
+    <div class="image">
+        <img src="{{ url_for('static', filename='./assets/photos/pct/'+image) }}"/>
     </div>
 </div>
 {% endfor %}
