--- a/app/static/css/style copy.css
+++ b/app/static/css/style copy.css
@@ -2,13 +2,13 @@
 
 html, body, .content, .sidebar {
   font-family: Garamond !important;
-  background-color: #ffffff !important;
   font-size: 12px;
+  background-color: #ffffff !important;
 }
 
 /* Hide scrollbar */
 
-html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .sidebar::-webkit-scrollbar {
+html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .sidebar::-webkit-scrollbar, .bottom_bar::-webkit-scrollbar {
   display: none;
 }
 
@@ -60,6 +60,8 @@ h3 {
   position: relative;
 }
 
+
+
 .landing_links {
   margin-left: 300px !important;
   font-size: 12px !important;
@@ -91,6 +93,7 @@ h3 {
   min-height: 900px;
   justify-content: center;
   text-align: center;
+  font-family: minerva modern;
   color: rgb(36, 20, 0) !important;
 }
 
@@ -110,6 +113,7 @@ h3 {
   margin-left: -80%;
   margin-top: -45px;
 }
+
 
 .fade_in_page {
   animation: fadeIn ease 1s;
@@ -168,7 +172,6 @@ h3 {
   text-align: center;
   margin: 50px;
 }
-
 .thought_heading {
   margin-top: 10%;
   margin-left: 50%;
