--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -10,25 +10,17 @@
         </iframe>
         <div class="about_text">
             <p>
-                &emsp; The best things in life involve building meaningful relationships with people and
-                spending as much time as possible in and appreciating nature.A year of my time was spent with a
-                remarkable
-                community at Spring Valley Farm in Connecticut, and I have also had the privilege to dedicate two
-                summers to
-                completing the Appalachian and Pacific Crest Trails.
+                &emsp;d
             </p>
             <p>
-                &emsp; With a boundless curiosity for the world, I aspire to apply techology towards solving meaningful
-                problems. Feel free to check out my
+                &emsp; d
                 <a href="../static/assets/resume/resume.pdf" download="resume" class="resume">
                     <span>
                         resume
                     </span>
-                </a> if you are into that sort of thing.
+                </a>.
             <p>
-                I try to approach each day with the optimism which it deserves, and am grateful for the many
-                oppurtunities I
-                have had and those which await to do my part to better the world in small steps.
+                d
             </p>
             <p class="about_signature">
                 - Al
