--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,8 +6,8 @@
 <div class="fade_in_page">
     <div class="index">
         <div class="index_heading ">
-            <h3>Al Miller III</h3>
-            <p>Towards holistic sustainability.</p>
+            <h3>Al Miller</h3>
+            <p>Software engineer and student of philospohy.</p>
         </div>
         <div class="links">
             <div class="row">
