--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -12,401 +12,10 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   display: none;
 }
 
-.content {
-  -ms-overflow-style: none;
-  scrollbar-width: none;
+/* Index landing */
+
+.landing_grid_container {
+  
 }
 
-/* Links */
 
-a {
-  color: #303a2c !important;
-}
-
-/* Thoughts */
-
-.thought_skills {
-  padding-left: 470px !important;
-  margin-bottom: 20px;
-  margin-top: -50px;
-  max-width: 900px;
-  min-width: 500px;
-}
-
-.thoughts h2 {
-  text-align: center;
-  margin-right: 39%;
-  font-size: 18px;
-  margin-top: -50px;
-  margin-bottom: 40px;
-}
-
-#other_title {
-  margin-top: 60px;
-}
-
-#cs_skills span {
-  text-align: right !important;
-  text-decoration: none;
-  transition: none !important;
-}
-
-h3 {
-  min-height: 40px !important;
-}
-
-.landing {
-  display: block;
-  position: relative;
-}
-
-.landing_links {
-  margin-left: 300px !important;
-  font-size: 12px !important;
-  margin-top: -50px !important;
-}
-
-.landing_contact .column {
-  width: 5%;
-}
-
-.landing_contact {
-  margin-left: 410px !important;
-  margin-top: 50px !important;
-}
-
-.landing_links .column {
-  width: 10%;
-}
-
-.landing {
-  background-image: url("../assets/photos/pct/sadboy.jpg");
-  background-color: rgb(230, 220, 209, 0.25);
-  background-blend-mode: lighten;
-  background-size: 65%;
-  background-repeat: no-repeat;
-  margin-top: 0%;
-  margin-left: 21%;
-  width: 100%;
-  min-height: 900px;
-  justify-content: center;
-  text-align: center;
-  color: rgb(36, 20, 0) !important;
-}
-
-.landing_heading h3 {
-  padding: 2%;
-  color: rgb(0, 0, 0) !important;
-  font-size: 22px;
-  margin-top: 60px;
-  margin-left: -80%;
-  align-items: center;
-}
-
-.landing_heading p {
-  color: black !important;
-  font-style: italic;
-  font-size: 14px;
-  margin-left: -80%;
-  margin-top: -45px;
-}
-
-.fade_in_page {
-  animation: fadeIn ease 1s;
-  -webkit-animation: fadeIn ease 1s;
-  -moz-animation: fadeIn ease 1s;
-  -o-animation: fadeIn ease 1s;
-  -ms-animation: fadeIn ease 1s;
-}
-
-@keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-moz-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-webkit-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-o-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@-ms-keyframes fadeIn {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-.gallery_pics_holder {
-  text-align: center;
-  margin: 50px;
-}
-
-.thought_heading {
-  margin-top: 10%;
-  margin-left: 50%;
-}
-
-.thoughts {
-  margin-top: 10%;
-}
-
-.thoughts h3 {
-  font-size: 14px;
-}
-
-.thoughts h3 p {
-  margin-top: 1px;
-  font-size: 11px;
-}
-
-.thoughts p {
-  margin-top: -2px;
-}
-
-.about_text {
-  margin: auto;
-  margin-top: 3%;
-  margin-left: 15%;
-  width: 50%;
-}
-
-.about_signature {
-  text-align: right;
-  margin-right: 12%;
-}
-
-#ytplayer {
-  margin: auto;
-  margin-top: 5% !important;
-  margin-top: 3%;
-  margin-left: 13%;
-}
-
-.logo_block {
-  display: block;
-  float: left;
-}
-
-.avatar {
-  height: 3px;
-  margin-top: 50px;
-  margin-left: 75px;
-  justify-self: center;
-  border-radius: 50%;
-}
-
-.column {
-  float: left;
-  width: 25%;
-}
-
-.icon {
-  display: inline-block;
-  position: relative;
-  top: calc(50% - 8px);
-  font-size: 12px !important;
-  transition: color 0.4s;
-}
-
-.fa-linkedin:hover {
-  color: rgb(0, 204, 255);
-  transition: color 0.4s;
-}
-
-.fa-github:hover {
-  color: rgb(255, 0, 0);
-  transition: color 0.4s;
-}
-
-.fa-file-pdf-o:hover {
-  color: rgb(255, 251, 0);
-  transition: color 0.4s;
-}
-
-.material-icons:hover {
-  color: rgb(0, 60, 255);
-  transition: color 0.4s;
-}
-
-.material-icons {
-  font-size: 14px !important;
-}
-
-.row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.links {
-  margin-top: 150px;
-  margin-left: 110px;
-}
-
-@media (max-width:629px) {
-  .avatar {
-    display: none;
-  }
-}
-
-.contact {
-  margin-top: 80px;
-  margin-left: 65px;
-  width: 50%;
-}
-
-.ul {
-  display: block;
-  float: left;
-  list-style-type: none !important;
-}
-
-.side_bar_top_margin {
-  margin-top: 10px;
-}
-
-.self_title {
-  margin-top: 55px;
-  margin-left: 65px;
-}
-
-.self_title h3 {
-  font-size: 26px;
-}
-
-.self_title p {
-  font-style: italic;
-  margin-top: -25px;
-}
-
-.sidebar {
-  margin: 0;
-  padding: 0;
-  width: 350px;
-  position: fixed;
-  height: 100%;
-  overflow: hidden;
-}
-
-.thought_title {
-  font-style: italic;
-}
-
-.thought_date {
-  margin-top: -10px;
-  font-style: italic;
-}
-
-.thought_body {
-  margin-top: 4%;
-  width: 60%;
-}
-
-.sidebar a {
-  display: block;
-  color: black;
-  margin-top: 60px;
-  text-decoration: none;
-}
-
-div.content {
-  margin-left: 350px;
-  height: 1000px;
-  overflow-x: hidden;
-}
-
-@media screen and (max-width: 700px) {
-  .sidebar {
-    width: 100%;
-    height: auto;
-    position: relative;
-  }
-  .links {
-    min-width: 200px !important;
-    margin-top: -60px;
-  }
-  .contact {
-    margin-left: 25%;
-  }
-  .column {
-    margin-top: -1%;
-    min-width: 20px;
-  }
-  .column a span {
-    margin-top: 200px;
-  }
-  .self_title {
-    justify-content: center;
-    margin-left: 30%;
-  }
-  .sidebar a {
-    padding-right: 32px;
-    float: left;
-  }
-  div.content {
-    margin-left: 0;
-  }
-}
-
-#thoughts_recap {
-  margin-left: 70%;
-  margin-top: 20%;
-}
-
-.links a:hover, .thoughts a:hover {
-  text-decoration: none;
-}
-
-.links span, .thoughts span, .yo {
-  text-decoration: none;
-  background-image: linear-gradient(currentColor, currentColor);
-  background-position: 0 100%;
-  background-repeat: no-repeat;
-  background-size: 0% 1px;
-  transition: background-size cubic-bezier(0.25, 0.25, 0.25, 0.25) 0.25s;
-}
-
-.links span:hover, .thoughts span:hover, .yo:hover .links span:focus, .thoughts span:focus, .yo:focus {
-  text-decoration: none;
-  background-size: 100% 1px;
-}
-
-.yo:active {
-  text-decoration: underline;
-}
-
-.yo:visited {
-  text-decoration: none;
-}
-
-a:active {
-  text-decoration: none !important;
-}
