--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,47 +4,29 @@
 {% endblock %}
 {% block content %}
 <div class="fade_in_page">
-    <div class="index">
-        <div class="index_heading ">
+    <div class="landing_grid_container">
+        <div class="landing_heading ">
             <h3>Al Miller</h3>
-            <p>Software engineer and student of philospohy.</p>
+            <p>Software engineer passionate about holistic sustainability.</p>
         </div>
-        <div class="links">
-            <div class="row">
-                <div class="column">
-                    <a href="{{ url_for('thought_index') }}"><span>thoughts</span></a>
-                </div>
-                <div class="column">
-                    <a href="{{ url_for('project_index') }}"><span>portfolio</span></a>
-                </div>
-                <div class="column">
-                    <a href="{{ url_for('about') }}"><span>about</span></a>
-                </div>
-            </div>
+        <div class="landing_nav_links">
+            <a class="link" href="{{ url_for('thought_index') }}"><span>thoughts</span></a>
+            <a class="link" href="{{ url_for('project_index') }}"><span>portfolio</span></a>
+            <a class="link" href="{{ url_for('about') }}"><span>about</span></a>
         </div>
-        <div class="index_contact">
-            <div class="row">
-                <div class="column">
-                    <a href="https://www.linkedin.com/in/al-miller/">
-                        <i class="fa fa-linkedin icon"></i>
-                    </a>
-                </div>
-                <div class="column">
-                    <a href="https://www.github.com/ANMillerIII/">
-                        <i class="fa fa-github icon"></i>
-                    </a>
-                </div>
-                <div class="column">
-                    <a href="../static/assets/resume/resume.pdf" download="resume">
-                        <i class="fa fa-file-pdf-o icon"></i>
-                    </a>
-                </div>
-                <div class="column">
-                    <a href="mailto:albert.miller@uconn.edu">
-                        <i class="material-icons icon">&#xe0e1;</i>
-                    </a>
-                </div>
-            </div>
+        <div class="landing_contact_links">
+            <a href="https://www.linkedin.com/in/al-miller/">
+                <i class="fa fa-linkedin icon"></i>
+            </a>
+            <a href="https://www.github.com/ANMillerIII/">
+                <i class="fa fa-github icon"></i>
+            </a>
+            <a href="../static/assets/resume/resume.pdf" download="resume">
+                <i class="fa fa-file-pdf-o icon"></i>
+            </a>
+            <a href="mailto:albert.miller@uconn.edu">
+                <i class="material-icons icon">&#xe0e1;</i>
+            </a>
         </div>
     </div>
 </div>
