--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,9 +1,33 @@
 /* Global */
 
 html, body, .content, .sidebar {
-  font-family: Garamond !important;
+  font-family: Recoleta-Regular !important;
   background-color: #ffffff !important;
-  font-size: 12px;
+  /* font-size: 12px; */
+  height: 100% !important;
+  margin: 0 !important;
+}
+
+/* Reco */
+@font-face {
+  font-family: 'Recoleta-Black';
+  src: url('../assets/fonts/Recoleta/Recoleta-Black.eot'), url('../assets/fonts/Recoleta/Recoleta-Black.ttf') format('truetype'), url('../assets/fonts/Recoleta/Recoleta-Black.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Recoleta-Medium';
+  src: url('../assets/fonts/Recoleta/Recoleta-Medium.eot'), url('../assets/fonts/Recoleta/Recoleta-Medium.ttf') format('truetype'), url('../assets/fonts/Recoleta/Recoleta-Medium.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Recoleta-Regular';
+  src: url('../assets/fonts/Recoleta/Recoleta-Regular.eot'), url('../assets/fonts/Recoleta/Recoleta-Regular.ttf') format('truetype'), url('../assets/fonts/Recoleta/Recoleta-Regular.svg') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 /* Hide scrollbar */
@@ -12,10 +36,163 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   display: none;
 }
 
+/* Fade page in */
+
+.fade_in_page {
+  animation: fadeIn ease 1s;
+  -webkit-animation: fadeIn ease 1s;
+  -moz-animation: fadeIn ease 1s;
+  -o-animation: fadeIn ease 1s;
+  -ms-animation: fadeIn ease 1s;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 /* Index landing */
 
 .landing_grid_container {
-  
+  display: grid;
+  grid-template-rows: 1fr 2fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-columns: 3fr 12fr 3fr;
+  height: 100%;
 }
 
+.landing_heading {
+  font-family: Recoleta-Black;
+  font-size: 50px;
+  justify-self: center !important;
+  grid-row: 2;
+  grid-column: 2;
+  text-align: center;
+}
+
+.landing_heading h3 {
+  font-family: Recoleta-Black;
+  font-size: 180px;
+  margin-bottom: 0;
+}
+
+.landing_nav_links {
+  justify-self: center !important;
+  grid-row: 3;
+  grid-column: 2;
+}
+
+.landing_nav_links a {
+  /* justify-items: center; */
+  margin-left: 10px !important;
+}
+
+
+.landing_contact_links {
+  align-self: top !important;
+  justify-self: center !important;
+  grid-row: 4;
+  grid-column: 2;
+  display: inline-flex;
+}
+
+.landing_contact_links a {
+  justify-items: center;
+  margin-left: 20px !important;
+}
+
+/* Links */
+
+a {
+  color: #303a2c !important;
+  text-decoration: none;
+}
+
+.link a:hover {
+  text-decoration: none;
+}
+
+.link span {
+  text-decoration: none;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 1px;
+  transition: background-size cubic-bezier(0.25, 0.25, 0.25, 0.25) 0.25s;
+}
+
+.link span:hover {
+  text-decoration: none;
+  background-size: 100% 1px;
+}
+
+/* Contact links */
+
+.icon {
+  font-size: 12px !important;
+  transition: color 0.4s;
+}
+
+.fa-linkedin:hover {
+  color: rgb(0, 204, 255);
+  transition: color 0.4s;
+}
+
+.fa-github:hover {
+  color: rgb(255, 0, 0);
+  transition: color 0.4s;
+}
+
+.fa-file-pdf-o:hover {
+  color: rgb(255, 251, 0);
+  transition: color 0.4s;
+}
+
+.material-icons:hover {
+  color: rgb(0, 60, 255);
+  transition: color 0.4s;
+}
+
+.material-icons {
+  font-size: 14px !important;
+}
 
