--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,13 +1,27 @@
 /* Global */
 
 html, body, .content, .sidebar {
+  
   font-family: Recoleta-Regular !important;
-  background-color: #ffffff !important;
+  /* background-color: #ffffff !important; */
   /* font-size: 12px; */
   height: 100% !important;
   margin: 0 !important;
+  color: #ffffff;
 }
 
+a {
+  color: white;
+  
+}
+
+html .landing_grid_container {
+  background-image: url("../assets/photos/pct/Mount_Hood.jpg");
+  background-size: cover;
+  /* background-repeat: space; */
+  background-color: rgba(255, 255, 255, 0.3);
+  background-blend-mode: lighten;
+}
 /* Reco */
 @font-face {
   font-family: 'Recoleta-Black';
@@ -95,7 +109,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
 
 .landing_grid_container {
   display: grid;
-  grid-template-rows: 1fr 2fr 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
   grid-template-columns: 3fr 12fr 3fr;
   height: 100%;
 }
@@ -104,7 +118,8 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   font-family: Recoleta-Black;
   font-size: 50px;
   justify-self: center !important;
-  grid-row: 2;
+  align-self: top !important;
+  grid-row: 1;
   grid-column: 2;
   text-align: center;
 }
@@ -112,25 +127,28 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
 .landing_heading h3 {
   font-family: Recoleta-Black;
   font-size: 180px;
+  margin-top: 10%;
   margin-bottom: 0;
 }
 
 .landing_nav_links {
   justify-self: center !important;
-  grid-row: 3;
+  align-self: top !important;
+  grid-row: 2;
   grid-column: 2;
 }
 
 .landing_nav_links a {
   /* justify-items: center; */
-  margin-left: 10px !important;
+  font-size: 36px;
+  margin-left: 50px !important;
 }
 
 
 .landing_contact_links {
   align-self: top !important;
   justify-self: center !important;
-  grid-row: 4;
+  grid-row: 3;
   grid-column: 2;
   display: inline-flex;
 }
@@ -143,7 +161,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
 /* Links */
 
 a {
-  color: #303a2c !important;
+  /* color: #303a2c !important; */
   text-decoration: none;
 }
 
@@ -168,8 +186,9 @@ a {
 /* Contact links */
 
 .icon {
-  font-size: 12px !important;
+  font-size: 36px;
   transition: color 0.4s;
+  color: white !important;
 }
 
 .fa-linkedin:hover {
@@ -193,6 +212,28 @@ a {
 }
 
 .material-icons {
-  font-size: 14px !important;
+  font-size: 36px;
+  color: white !important;
 }
 
+/* Make landing text smaller on mobile */
+
+@media only screen and (max-width: 600px) {
+  .landing_heading {
+    font-size: 14px !important;
+  }
+  
+  .landing_heading h3 {
+    font-size: 44px !important;
+  }
+}
+
+@media only screen and (max-height: 350px) {
+  .landing_heading {
+    font-size: 14px !important;
+  }
+  
+  .landing_heading h3 {
+    font-size: 44px !important;
+  }
+}
