decided to keep it minimal, single page

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block title %}index{% endblock %}
-{% block side_bar %}
+{% block sidebar %}
 {% endblock %}
 {% block content %}
 <div class="fade_in_page landing_grid_container">
@@ -8,11 +8,11 @@
         <h3>Al Miller</h3>
         <p>Software engineer passionate about holistic sustainability.</p>
     </div>
-    <div class="landing_nav_links">
+    <!-- <div class="landing_nav_links">
         <a class="link" href="{{ url_for('thought_index') }}"><span>thoughts</span></a>
         <a class="link" href="{{ url_for('project_index') }}"><span>portfolio</span></a>
         <a class="link" href="{{ url_for('about') }}"><span>about</span></a>
-    </div>
+    </div> -->
     <div class="landing_contact_links">
         <div class="contact_link">
             <a href="https://www.linkedin.com/in/al-miller/">
