--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -29,8 +29,8 @@
 </head>
 
 <body>
-    {% block side_bar %}
-    {% include './side_bar.html' %}
+    {% block sidebar %}
+    {% include './sidebar.html' %}
     {% endblock %}
     {% block content %}
     {% endblock %}
