--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,28 +1,94 @@
 /* Global */
 
-html, body, .content, .sidebar {
-  
-  font-family: Recoleta-Regular !important;
-  /* background-color: #ffffff !important; */
-  /* font-size: 12px; */
-  height: 100% !important;
-  margin: 0 !important;
+html, body, .content {
+  overflow: hidden;
+  font-family: Recoleta-Black !important;
+  height: 100vh;
+  margin: 0;
   color: #ffffff;
-}
-
-a {
-  color: white;
-  
 }
 
 html .landing_grid_container {
   background-image: url("../assets/photos/pct/Mount_Hood.jpg");
   background-size: cover;
-  /* background-repeat: space; */
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(255, 255, 255, 0.1);
   background-blend-mode: lighten;
 }
-/* Reco */
+
+.sidebar_container {
+  /* position: fixed; */
+  display: grid;
+  width: 30%;
+  height: 100%;
+  grid-template-columns: 1 !important;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+.content_container {
+  position: fixed;
+  display: grid;
+  margin-left: 30% !important;
+  /* width: 30%; */
+  height: 100%;
+  grid-template-columns: 1 !important;
+  grid-template-rows: repeat(3, 1fr);
+}
+
+/* Thoughts and Projects */
+
+.thoughts_ {
+  align-self: top !important;
+  justify-self: center !important;
+  grid-row: 3;
+  grid-column: 2;
+  display: inline-flex;
+}
+
+.landing_contact_links a {
+  justify-items: center;
+  margin-left: 20px !important;
+  
+}
+
+.landing_contact_links {
+  margin-left: -50px !important;
+}
+
+/* .sidebar {
+  asf
+} */
+
+.content_container {
+
+  
+}
+
+/* Links */
+
+a {
+  text-decoration: none;
+}
+
+.link a:hover {
+  text-decoration: none;
+}
+
+.link span {
+  text-decoration: none;
+  background-image: linear-gradient(currentColor, currentColor);
+  background-position: 0 100%;
+  background-repeat: no-repeat;
+  background-size: 0% 1px;
+  transition: background-size cubic-bezier(0.25, 0.25, 0.25, 0.25) 0.25s;
+}
+
+.link span:hover {
+  text-decoration: none;
+  background-size: 100% 1px;
+}
+
+/* Recoleta font */
+
 @font-face {
   font-family: 'Recoleta-Black';
   src: url('../assets/fonts/Recoleta/Recoleta-Black.eot'), url('../assets/fonts/Recoleta/Recoleta-Black.ttf') format('truetype'), url('../assets/fonts/Recoleta/Recoleta-Black.svg') format('svg');
@@ -46,11 +112,11 @@ html .landing_grid_container {
 
 /* Hide scrollbar */
 
-html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .sidebar::-webkit-scrollbar {
+html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar {
   display: none;
 }
 
-/* Fade page in */
+/* Fade transition */
 
 .fade_in_page {
   animation: fadeIn ease 1s;
@@ -105,7 +171,7 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   }
 }
 
-/* Index landing */
+/* Landing page (index) */
 
 .landing_grid_container {
   display: grid;
@@ -114,9 +180,13 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   height: 100%;
 }
 
+.landing_grid_container a {
+  color: #ffffff;
+}
+
 .landing_heading {
-  font-family: Recoleta-Black;
-  font-size: 50px;
+  /* font-family: Recoleta-Black; */
+  font-size:calc(12px + 2vw);
   justify-self: center !important;
   align-self: top !important;
   grid-row: 1;
@@ -124,12 +194,18 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   text-align: center;
 }
 
+.landing_heading p {
+  margin-top: -10px;
+
+}
+
 .landing_heading h3 {
-  font-family: Recoleta-Black;
-  font-size: 180px;
+  /* font-family: Recoleta-Black; */
+  font-size: calc(12px + 12vw);
   margin-top: 10%;
   margin-bottom: 0;
 }
+
 
 .landing_nav_links {
   justify-self: center !important;
@@ -139,11 +215,9 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
 }
 
 .landing_nav_links a {
-  /* justify-items: center; */
   font-size: 36px;
   margin-left: 50px !important;
 }
-
 
 .landing_contact_links {
   align-self: top !important;
@@ -158,37 +232,13 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar, .
   margin-left: 20px !important;
 }
 
-/* Links */
-
-a {
-  /* color: #303a2c !important; */
-  text-decoration: none;
-}
-
-.link a:hover {
-  text-decoration: none;
-}
-
-.link span {
-  text-decoration: none;
-  background-image: linear-gradient(currentColor, currentColor);
-  background-position: 0 100%;
-  background-repeat: no-repeat;
-  background-size: 0% 1px;
-  transition: background-size cubic-bezier(0.25, 0.25, 0.25, 0.25) 0.25s;
-}
-
-.link span:hover {
-  text-decoration: none;
-  background-size: 100% 1px;
-}
-
-/* Contact links */
+/* Contact icon links */
 
 .icon {
-  font-size: 36px;
+  font-size: calc(12px + 3vw) !important;
   transition: color 0.4s;
   color: white !important;
+  margin-left: 30px;
 }
 
 .fa-linkedin:hover {
@@ -212,17 +262,46 @@ a {
 }
 
 .material-icons {
-  font-size: 36px;
+  font-size: calc(12px + 3vw);
   color: white !important;
 }
 
-/* Make landing text smaller on mobile */
+@media only screen and (max-width: 500px) {
+  .landing_heading p {
+    margin-top: 20px;
+    /* margin-top: auto !important; */
+  }
+  .landing_contact_links {
+    /* align-self: top !important;
+    justify-self: center !important; */
+    /* color: red !important; */
+    /* grid-row: 3;
+    grid-column: 2; */
+    display: flex !important;
+    max-width: 50px;
+    margin-left: 0;
 
+    flex-wrap: wrap;
+  }
+  .icon {
+    margin-top: 50%;
+    /* align-self: top !important;
+    justify-self: center !important; */
+    /* color: red !important; */
+    /* grid-row: 3;
+    grid-column: 2; */
+    /* display: inline-flex; */
+  }
+}
+
+/* Mobile friendly */
+
+/* Make landing text smaller on mobile */
+/* 
 @media only screen and (max-width: 600px) {
   .landing_heading {
     font-size: 14px !important;
   }
-  
   .landing_heading h3 {
     font-size: 44px !important;
   }
@@ -232,8 +311,8 @@ a {
   .landing_heading {
     font-size: 14px !important;
   }
-  
   .landing_heading h3 {
     font-size: 44px !important;
   }
-}
+} */
+
