--- a/app/templates/thoughts.html
+++ b/app/templates/thoughts.html
@@ -1,23 +1,18 @@
 {% extends "layout.html" %}
 {% block title %}thoughts{% endblock %}
 {% block content %}
-<div class="fade_in_page">
-    <div class="content">
-        <div class="thoughts">
-            {% for thought in thoughts %}
-            <h3>
-                <a href="{{ url_for('thought', thought_key=thought)}}">
-                    <span class="thought_title">
-                        {{ thoughts[thought].title }}
-                    </span>
-                </a>
-                <p>
-                    <i>
-                        {{thoughts[thought].date|format_date_time}}
-                    </i>
-                </p>
-                {% endfor %}
-        </div>
-    </div>
+<div class="fade_in_page content_container">
+    {% for thought in thoughts %}
+    <a href="{{ url_for('thought', thought_key=thought)}}">
+        <span class="content_heading">
+            {{ thoughts[thought].title }}
+        </span>
+    </a>
+    <p>
+        <i>
+            {{thoughts[thought].date|format_date_time}}
+        </i>
+    </p>
+    {% endfor %}
 </div>
 {% endblock %}
