--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,11 +8,6 @@
         <h3>Al Miller</h3>
         <p>Software engineer passionate about holistic sustainability.</p>
     </div>
-    <!-- <div class="landing_nav_links">
-        <a class="link" href="{{ url_for('thought_index') }}"><span>thoughts</span></a>
-        <a class="link" href="{{ url_for('project_index') }}"><span>portfolio</span></a>
-        <a class="link" href="{{ url_for('about') }}"><span>about</span></a>
-    </div> -->
     <div class="landing_contact_links">
         <div class="contact_link">
             <a href="https://www.linkedin.com/in/al-miller/">
@@ -25,7 +20,7 @@
             </a>
         </div>
         <div class="contact_link">
-            <a href="../static/assets/resume/resume.pdf" download="resume">
+            <a href="../static/assets/resume/resume_am.pdf" download="resume_am">
                 <i class="fa fa-file-pdf-o icon"></i>
             </a>
         </div>
