--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    {% block head %}
-    <title>Al Miller III - {% block title %}{% endblock %}</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        {% block head %}
+        <title>Al Miller III - {% block title %}{% endblock %}</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" crossorigin="anonymous" />
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+        <link rel="stylesheet" href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+            crossorigin="anonymous" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='js/mailgo.min.js') }}" defer></script>
-    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-    
-    <!-- Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-179254393-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-        gtag('config', 'UA-179254393-1');
-    </script>
-    {% endblock %}
-</head>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="{{ url_for('static', filename='js/mailgo.min.js') }}" defer></script>
+        <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 
-<body>
-    {% block sidebar %}
-    {% include './sidebar.html' %}
-    {% endblock %}
-    {% block content %}
-    {% endblock %}
-</body>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-JXNHMQ5QNH"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag() { dataLayer.push(arguments); }
+            gtag('js', new Date());
+
+            gtag('config', 'G-JXNHMQ5QNH');
+        </script>
+        {% endblock %}
+    </head>
+
+    <body>
+        {% block sidebar %}
+        {% include './sidebar.html' %}
+        {% endblock %}
+        {% block content %}
+        {% endblock %}
+    </body>
 
 </html>
