refactor main.js, need to fix sidebar css

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,7 @@
 <div class="fade_in_page landing_grid_container">
     <div class="landing_heading ">
         <p id="name">Al Miller</p>
-        <p>Software engineer passionate about holistic sustainability.</p>
+        <p id="subtitle">Software engineer passionate about holistic sustainability.</p>
     </div>
     <div class="landing_contact_links">
         <div class="contact_link">
