--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,27 +1,6 @@
 * {
   font-family: Garamond;
-  z-index: 10;
-}
-
-canvas {
-  width: 80%;
-  height: 80%;
-}
-
-/* div {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 330;
-  height: 370;
-  border-color: white;
-  border-width: 2;
-  border-style: solid;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 9;
-} */
-
-html .landing_grid_container {
+  color: black;
 }
 
 /* Hide scrollbar */
@@ -30,14 +9,22 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar {
   display: none;
 }
 
+/* p5.js styles */
+
+canvas {
+  width: 80%;
+  height: 80%;
+}
+
 /* Fade transition */
 
 .fade_in_page {
-  animation: fadeIn ease 12s;
-  -webkit-animation: fadeIn ease 12s;
-  -moz-animation: fadeIn ease 12s;
-  -o-animation: fadeIn ease 12s;
-  -ms-animation: fadeIn ease 12s;
+  animation: fadeIn ease 4s;
+  -webkit-animation: fadeIn ease 4s;
+  -moz-animation: fadeIn ease 4s;
+  -o-animation: fadeIn ease 4s;
+  -ms-animation: fadeIn ease 4s;
+  /* Delay until tree has grown */
   animation-delay: 9.5s !important;
 }
 
@@ -88,58 +75,34 @@ html::-webkit-scrollbar, body::-webkit-scrollbar, .content::-webkit-scrollbar {
 
 /* Links */
 
-a {
-  text-decoration: none;
-}
-
 .landing_contact_links a {
   justify-items: center;
-  margin-left: 20px !important;
-}
-
-.landing_contact_links {
-  margin-left: -50px !important;
-}
-
-.link a:hover {
-  text-decoration: none;
-}
-
-.link span {
-  text-decoration: none;
-  background-image: linear-gradient(currentColor, currentColor);
-  background-position: 0 100%;
-  background-repeat: no-repeat;
-  background-size: 0% 1px;
-  transition: background-size cubic-bezier(0.25, 0.25, 0.25, 0.25) 0.25s;
-}
-
-.link span:hover {
-  text-decoration: none;
-  background-size: 100% 1px;
+  margin-left: 20px;
 }
 
 /* Landing page (index) */
 
 .landing_grid_container {
-  width: 100%;
-  transition-delay: 4s;
-  transition: opacity 1 0s !important;
-  opacity: 0;
   position: fixed;
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
-  grid-template-columns: 3fr 3fr 3fr;
   height: 100%;
-  margin-right: -1000px !important;
+  width: 100%;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  /* margin-right: -1000px !important; */
 }
 
-.landing_grid_container a {
-  color: black;
-}
+/* Self title */
 
 #name {
-  font-size: 2.5vw;
+  /* text-align: left; */
+  font-size: 2vw;
+}
+
+#subtitle {
+  text-align: right;
+  /* max-width: 350px; */
+  margin-top: -30px;
 }
 
 .landing_heading {
@@ -151,27 +114,12 @@ a {
   text-align: center;
 }
 
-/* .landing_heading p {
-  margin-top: -10px;
-} */
-
-.landing_heading h3 {
-  font-size: calc(6px + 1vw);
-  margin-top: 10%;
-  margin-bottom: 0;
-}
-
 .landing_contact_links {
+  display: inline-flex;
   align-self: top !important;
   justify-self: center !important;
-  grid-row: 5;
   grid-column: 3;
-  display: inline-flex;
-}
-
-.landing_contact_links a {
-  justify-items: center;
-  margin-left: 20px !important;
+  grid-row: 3;
 }
 
 /* Contact icon links */
@@ -186,24 +134,4 @@ a {
 .material-icons {
   font-size: calc(12px + 0.6vw);
   color: black !important;
-}
-/* 
-@media only screen and (max-width: 500px) {
-  .landing_heading p {
-    margin-top: 20px;
-  }
-  .landing_contact_links {
-    display: flex !important;
-    max-width: 50px;
-    margin-left: 0;
-    flex-wrap: wrap;
-  }
-  .icon {
-    margin-top: 50%;
-  }
-} */
-
-
-.contain {
-  width: 10% !important;
 }
